<resources>
    <string name="app_name">BRTS System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_api_key">AIzaSyBYeTUZDqpaxR8i5gBEJSFMVLTcIdGGod0</string>
    <string name="Login">Login</string>
    <string name="EmailEnter">Enter your Email</string>
    <string name="PasswordEnter">Enter your Password</string>
    <string name="toRegister">Not have an account? Sign up Here</string>
    <string name="Registration">Registration</string>
    <string name="NameEnter">Enter your Name</string>
    <string name="register">Register</string>
    <string name="toLogin">Already Registered? Sign in Here</string>
    <string name="about">About</string>
    <string name="user_login">User Login</string>
    <string name="user_register">User Registration</string>
    <string name="sou_station">Source Station</string>
    <string name="des_station">Destination Station</string>
    <string name="search">Search</string>
    <string name="searchStation">Search Between Two Station</string>
    <string name="ConfirmPassowrd">Confirm your Passowrd</string>
    <string name="action_settings">Settings</string>
    <string name="all_station">All Station</string>
    <string name="str_about">About</string>
    <string name="str_feedback">Feedback</string>
    <string name="feedback_data">Enter Feedback Here</string>
    <string name="submit">Submit</string>
    <string name="username">Mitul Panchal</string>
    <string name="email">imitulpanchal@gmail.com</string>
    <string name="fare">Total Fare : </string>
    <string name="ss">Source:</string>
    <string name="dd">Destination : </string>
    <string name="fare_calc">Fare calculator</string>
    <string name="calculate">calculate</string>
    <string name="booking_here">Scan this QR Code at Station for Ticket</string>
    <string name="feed">Enter Your Feedback Here</string>
    <string name="fare_between_station">Fare Between Station</string>
    <string name="source">Source :</string>
    <string name="destination_station_name">Destination Station Name</string>
    <string name="source_station_">Source Station Name</string>
    <string name="destinstion">Destinstion:</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="distance">Distance:</string>
    <string name="_10">10</string>
    <string name="_10_rs">10 Rs</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="track_bus_location">Track bus Location</string>
    <string name="ticket">Ticket</string>
    <string name="fare_">Fare</string>
    <string name="_101">101</string>
    <string name="bus">Bus</string>
</resources>
