<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/Login" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_all_station"
            android:title="@string/all_station" />
        <item
            android:id="@+id/fare"
            android:title="@string/fare_"/>
        <item
            android:id="@+id/nav_bus"
            android:title="@string/track_bus_location" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/str_feedback" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/str_about" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"/>
    </group>
</menu>
