<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp">

    <TextView
        android:id="@+id/faretitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:text="@string/fare_between_station"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:text="@string/source"
        android:textSize="22sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/faretitle"
        android:layout_alignTop="@+id/textView9"
        android:gravity="end"
        android:text="Text"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:text="@string/destinstion"
        android:textSize="22sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView11"
        android:gravity="end"
        android:text="Text"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:gravity="center"
        android:text="TextView"
        android:paddingBottom="10dp"
        android:textSize="22sp" />

</RelativeLayout>